<resources>
    <string name="app_name">Spectroom_app</string>
    <string name="nombre">Introduzca su nombre:</string>
    <string name="aceptar">Aceptar</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nameSignIn">Nombre</string>
    <string name="firstSurnameSignIn">Primer apellido</string>
    <string name="secondSurnameSignIn">Segundo apellido</string>
    <string name="addressSignIn">Dirección</string>
    <string name="emailSignIn">Correo electrónico</string>
    <string name="passwordSignIn">Contraseña</string>
    <string name="createPassword">Debe contener una minúscula, una mayúscula, un dígito y un caracter especial. De 8 a 20 caracteres.</string>
    <string name="passwordRepeatSignIn">Repita la contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="parrafoInicial">Edición de fotografías y diseño gráfico</string>
    <string name="imagen_del_logo" />
    <string name="emailHint">Introduzca su correo</string>
    <string name="passwordHint">Introduzca su contraseña</string>
    <string name="acceder_sin_registrarse">Acceder sin registrarse</string>
    <!--  Buttons Sign in -->
    <string name="buttonSignIn">Registrarse</string>
    <string name="buttonNext">Siguiente</string>
    <!--  Buttons Shop -->
    <string name="buttonMove">Mover</string>
    <string name="buttonUpdate">Añadir</string>
    <string name="buttonRemove">Eliminar</string>
    <string name="buttonBack">Volver</string>
    <!--  Get In Touch -->
    <string name="nameGetInTouch">Introduzca su nombre</string>
    <string name="emailGetInTouch">Introduzca su correo</string>
    <string name="commentGetInTouch">Escriba aquí su comentario</string>

    <!--  Navigation drawer menu -->
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string name="title_contact">Contacto</string>
    <string name="title_shop">Bienvenido a la tienda</string>
    <string name="perfil">Perfil</string>
    <string name="tienda">Tienda</string>
    <string name="contacto">Contacto</string>
    <string name="string_action_settings">Cesta</string>
    <string name="contacto1">Contacto</string>
    <string name="bienvenido_al_men">Bienvenido al menú</string>
    <string name="profile">Mi perfil</string>
    <string name="t_tulo"></string>
    <string name="subt_tulo">Subtítulo</string>
    <string name="todo">TODO</string>
    <string name="editproducttitulo">Ha seleccionado la Camisa:</string>
    <string name="option_1">Diseño personalizado</string>
    <string name="option_2">Nombre personalizado</string>
    <string name="option_3">Diseño de flor</string>
    <string name="option_4">Otros detalles:</string>
    <string name="add_text">Añadir</string>
    <string name="editTextAdd">Añadir otros detalles</string>
    <string name="buttonNextProduct">Siguiente</string>
    <string name="textViewProductFinal1"></string>
    <string name="textViewProductFinal2"></string>
    <string name="textViewProductFinal3"></string>
    <string name="textViewProductFinal4"></string>
    <string name="txtopc4">Texto de la Opción 4:</string>
    <string name="buttonBack1">Tienda</string>
    <string name="buttonAddProduct">Añadir</string>
    <string name="texto_perfil">Usuario 1234</string>
    <string name="parrafo_perfil">Bienvenido a su perfil</string>
    <string name="buttonCart">Cesta</string>
    <string name="shopPrincipal">Mi cesta</string>
    <string name="cesta">Cesta</string>
    <string name="menuCart">Cesta</string>
    <string name="parrafo_loginin">Bienvenido a la aplicación.\n\nPara seleccionar sus productos, acceda en el menú al apartado de Tienda.</string>
    <string name="menuLogout">Salir del perfil</string>
    <string name="menuLogoutText">Salir</string>
    <string name="logout">Cerrar sesión</string>
    <string name="parrafo_logout">¿Desea salir de su perfil?</string>
    <string name="buttonExit">Aceptar</string>
    <string name="buy_items">Comprar</string>
    <string name="buttonBuyItems">Comprar</string>
    <string name="buttonBackToProfile">Ir al perfil</string>
    <string name="menuProfile" />
    <string name="logoutImageViewContentDesc">image</string>
    <string name="logout_under_pic_content_desc">image_under_pic</string>
    <string name="opcion_1">Opción 1:</string>
    <string name="opcion_2">Opción 2:</string>
    <string name="opcion_3">Opción 3:</string>
    <string name="opcion_4">Opción 4:</string>
    <string name="title_buyitems">Mis pedidos</string>
    <string name="title_buyitems1">Ha comprado estos artículos:</string>
    <string name="title_cart">Cesta de compra</string>
    <string name="buttonProfileToBuyItems">Mis pedidos</string>
    <string name="boton_enviar">Enviar</string>
    <string name="comentario_hint">Escribe tu motivo</string>
    <string name="motivo_hint">Tu motivo</string>
    <string name="parrafo_logininadmin">Bienvenido Administrador.\n\nPara editar sus productos, acceda en el menú al apartado de Tienda.</string>
    <string name="profileAdmin">Administrador</string>
    <string name="texto_perfilAdmin">Administrador</string>
    <string name="buttonProfileToEditShop">Editar productos</string>
</resources>