<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mnuOpc1Profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />
        <item
            android:id="@+id/mnuOpc2Shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/tienda" />
    </group>
    <item android:title="@string/contacto">
        <menu>
            <item
                android:id="@+id/mnuOpc3GetInTouch"
                android:icon="@drawable/ic_contact"
                android:title="@string/contacto1" />
        </menu>
    </item>
    <item android:title="@string/menuLogout">
        <menu>
            <item
                android:id="@+id/mnuOpc4Logout"
                android:icon="@drawable/arrow_circle_left"
                android:title="@string/menuLogoutText" />
        </menu>
    </item>
</menu>