<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:background="@color/purpleBackground"
    tools:context=".LogoutFragment"
    tools:showIn="@layout/fragment_logout"
    android:focusable="true">

    <!--  Resto de la interfaz de usuario  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:text="@string/logout"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/logout_under_pic"
        android:layout_width="390dp"
        android:layout_height="420dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logout_under_pic_content_desc"
        android:src="@drawable/profile_under_pic" />

    <ImageView
        android:id="@+id/logoutImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="-379dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logoutImageViewContentDesc"
        android:src="@mipmap/ic_profile1" />

    <TextView
        android:id="@+id/logoutTextViewPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/texto_perfil"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/logoutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/parrafo_logout"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/buttonExit"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="300dp"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/purpleButtonBackground"
        android:text="@string/buttonExit"
        android:textColor="#607D8B" />
</LinearLayout>