<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleBackground"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".EditProductNext"
    tools:showIn="@layout/activity_editproductnext">

    <!-- Barra de herramientas -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purpleButtonBackground"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Resto de la interfaz de usuario -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editproducttitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:text="@string/editproducttitulo"
            android:textColor="@color/blueGrayStrongText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="270dp"
            android:layout_gravity="center"
            android:text="@string/t_tulo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blueGrayStrongText"/>

        <TextView
            android:id="@+id/textViewResult1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/textViewProductFinal1"/>

        <TextView
            android:id="@+id/textViewResult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/textViewProductFinal2"/>

        <TextView
            android:id="@+id/textViewResult3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/textViewProductFinal3"/>

        <TextView
            android:id="@+id/textViewResult4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/textViewProductFinal4"/>

        <TextView
            android:id="@+id/textViewOpcion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:layout_marginBottom="250dp"
            android:layout_gravity="center"
            android:text="@string/txtopc4"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/buttonAddProduct"
            android:text="@string/buttonAddProduct"
            android:layout_marginTop="360dp"
            android:layout_marginBottom="300dp"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="155dp"
            android:layout_marginEnd="19dp"
            android:backgroundTint="@color/purpleButtonBackground"
            android:textColor="#607D8B"/>

        <!-- Botón Back -->
        <Button
            android:id="@+id/buttonBack"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="300dp"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="155dp"
            android:layout_marginEnd="19dp"
            android:backgroundTint="@color/purpleButtonBackground"
            android:text="@string/buttonBack"
            android:textColor="#607D8B" />
    </FrameLayout>
</LinearLayout>