<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="-35dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/shirt" />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_tulo"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_gravity="start" />

    <TextView
        android:id="@+id/lblSubTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subt_tulo"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="start"/>
</LinearLayout>
