<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:background="@color/purpleBackground"
    tools:context=".ProfileAdminFragment"
    tools:showIn="@layout/fragment_profileadmin"
    android:focusable="true">

    <!--  Resto de la interfaz de usuario  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:text="@string/profileAdmin"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/profile_under_pic"
        android:layout_width="390dp"
        android:layout_height="420dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"

        android:scaleType="centerCrop"
        android:src="@drawable/profile_under_pic" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="-379dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_profile1" />

    <TextView
        android:id="@+id/profileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/texto_perfilAdmin"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/profileTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/parrafo_perfil"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/buttonProfileToEditShop"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="300dp"
        android:layout_gravity="center"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="19dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purpleButtonBackground"
        android:text="@string/buttonProfileToEditShop"
        android:textColor="#607D8B" />

</LinearLayout>