<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purpleBackground"
    tools:context=".ShopAdminFragment">

    <!--  Resto de la interfaz de usuario  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/title_shop"
        android:textSize="20sp" />

    <!-- Botones alineados horizontalmente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/purpleButtonBackground"
            android:text="@string/buttonUpdate"
            android:textColor="#607D8B" />

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purpleButtonBackground"
            android:text="@string/buttonRemove"
            android:textColor="#607D8B" />

    </LinearLayout>

    <!-- RecyclerView con ajustes de margen -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecViewListItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />
</LinearLayout>
